[project]
name = "pylto"
version = "0.1.0"
description = "pylto is a python script which generates a pdf of LTO tape labels for printing onto Avery label sheet 6577"
authors = [
    {name = "Brandon Demelo"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "reportlab (>=4.4.4,<5.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyinstaller (>=6.17.0,<7.0.0)"
]

[dependency-groups]
dev = [
    "poetry (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
